# next-step-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  __main__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.ps1  setup.py  setup.sh
data/processed/: data_stats.json
data/raw/: student_profiles.csv
docs/: model_comparison.md  structure.md
docs/roadmap/: ROADMAP.md
evaluation/: evaluation_results.json
notebooks/: 00_quickstart_guide.ipynb  01_data_exploration.ipynb
scripts/: evaluate_model.py  generate_dataset.py  generate_sample_data.py  predict.py  predict_cli.py  prepare_data.py  process_data.py  serve_model.py  test_model.py  test_predictions.py  train_model.py  tune_hyperparameters.py
src/: __init__.py
src/api/: README.md  auth.py  database.py  main.py  models.py  routes.py
src/config/: __init__.py  config.py  config.yaml  model_config.yaml
src/data/: compatibility_check.py  preprocessing.py  preprocessor.py  validator.py
src/generators/: __init__.py  generator.py
src/models/: al_stream_predictor.py  base_model.py  career_guidance_model.py  career_guidance_system.py  career_path_predictor.py  career_predictor.py  decision_tree_model.py  gradient_boosting_model.py  predictor.py  preprocessing.py  university_predictor.py
src/predictors/: __init__.py  predictor.py
src/preprocessors/: __init__.py  preprocessor.py
src/train/: trainer.py
src/trainers/: __init__.py  trainer.py
src/utils/: logger.py
tests/: test_gradient_boosting_model.py  test_preprocessing.py
(+3 files in other folders)
