[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "next_step_ai"
version = "0.1.0"
description = "Next Step AI - Career Path Prediction Model"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "pre-commit",
    "joblib",
    "setuptools",
    "wheel"
]
